--- a/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle.properties
@@ -31,5 +31,5 @@ JOP.spaces = Manageable spaces
 JOP.profiles = Profile membership
 JOP.profile = Profile
 JOP.instance = Instance
-
 PDCSubscription.show = Show user PDC Subscriptions
+JOP.silverPassword = Mot de passe Silverpeas
