--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     wikis,
     images gallery and its own Enterprise Content Management tool.
   </description>
-  
+
   <scm>
     <connection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</connection>
     <developerConnection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</developerConnection>
@@ -114,7 +114,7 @@
           </execution>
         </executions>
       </plugin>
-      
+
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.0-beta-3</version>
@@ -123,7 +123,7 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-project-info-reports-plugin</artifactId>
-              <version>2.3.1</version>  
+              <version>2.3.1</version>
               <reportSets>
                 <reportSet>
                   <reports>
@@ -135,7 +135,7 @@
                     <report>index</report>
                     <report>issue-tracking</report>
                     <report>modules</report>
-                    <report>project-team</report>    
+                    <report>project-team</report>
                     <report>license</report>
                     <report>scm</report>
                   </reports>
@@ -152,9 +152,9 @@
               <version>2.7</version>
             </plugin>
           </reportPlugins>
-        </configuration> 
+        </configuration>
       </plugin>
-      
+
     </plugins>
   </build>
 
@@ -198,6 +198,7 @@
     <module>test-core</module>
     <module>lib-core</module>
     <module>it-test-core</module>
+    <module>ws-test-core</module>
     <module>ejb-core</module>
     <module>web-core</module>
     <module>war-core</module>
