--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -15,7 +15,7 @@
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
