Using string instead of Vector for the user favorite language and adding some tests

--- a/ejb-core/personalization/src/test/filters/filters.properties
+++ b/ejb-core/personalization/src/test/filters/filters.properties
@@ -23,7 +23,7 @@
 #
 
 jdbc_driver=org.h2.Driver
-jdbc_url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+jdbc_url=jdbc:h2:mem:personalization;DB_CLOSE_DELAY=-1
 jdbc_login=sa
 jdbc_password=
 
