Using JPA2 and Hades for personalization

--- a/ejb-core/personalization/pom.xml
+++ b/ejb-core/personalization/pom.xml
@@ -9,8 +9,8 @@
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
   <artifactId>personalization</artifactId>
-  <packaging>ejb</packaging>
-  <name>EJB Personalization</name>
+  <packaging>jar</packaging>
+  <name>Personalization Service</name>
   
   <dependencies>
     <dependency>
@@ -31,6 +31,11 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>unknown.binary</groupId>
+          <artifactId>hibernate-entitymanager-3.6.1.Final</artifactId>
+          <version>SNAPSHOT</version>
+      </dependency>
   </dependencies>
   
   <build>
@@ -44,4 +49,11 @@
       <filter>src/test/filters/filters.properties</filter>
     </filters>  
   </build>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 </project>
