closing feature #470 and feature #1605 Files attached to an item (publication, event, process...) have been redesigned.

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
@@ -75,3 +75,5 @@ DelayReservedFile = 60
 
 
 ms.office.installation.path=C:\\\\Program Files\\\\Microsoft Office\\\\OFFICE10
+
+ui.useContextualMenu = false
