--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/uploads/uploadSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/uploads/uploadSettings.properties
@@ -44,24 +44,29 @@ pubx = publisher2007.gif
 3d  = 3d.gif
 3D  = 3d.gif
 
-avi = sound.gif
+avi = video.gif
 mp3 = sound.gif
 wav = sound.gif
 cda = sound.gif
+ogg = sound.gif
 
 mpg = video.gif
 asf = video.gif
 asx = video.gif
 mov = video.gif
+flv = video.gif
+mp4 = video.gif
 
 gif = image.gif
 jpg = image.gif
 jpeg = image.gif
 bmp = image.gif
 tif = image.gif
+tiff = image.gif
 png = image.gif
 
 swf = flash.gif
+fla = flash.gif
 exe = exe.gif
 
 htm = html.gif
@@ -73,6 +78,8 @@ txt = texte.gif
 unknown = unknown.gif
 
 zip = zip.gif
+rar = zip.gif
+jar = zip.gif
 
 odt = oo_text.gif
 odp = oo_presentation.gif
@@ -80,4 +87,23 @@ ods = oo_spreadsheet.gif
 odb = oo_base.gif
 odg = oo_draw.gif
 
+csv = doc_excel_csv.gif
+psd = doc_photoshop.gif
+pdd = doc_photoshop.gif
 
+eps = doc_illustrator.gif
+ai = doc_illustrator.gif
+
+cpp = page_white_cplusplus.gif
+cs = page_white_csharp.gif
+php = page_white_php.gif
+rb = page_white_ruby.gif
+vb = page_white_visualstudio.gif
+vbe = page_white_visualstudio.gif
+vbs = page_white_visualstudio.gif
+
+java = page_white_cup.gif
+jsp = page_white_cup.gif
+js = js.gif
+
+iso = page_white_dvd.gif
