The portlet implementation in Silverpeas is updated to take into account of the 2.1 portlet-container of java.net. Excludes some dependencies and set other ones as provided in order to avoid conflict with some jarlibs in JBoss 6

--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -136,7 +136,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <artifactId>java-portlet-container</artifactId>
+      <artifactId>portlet-container</artifactId>
       <groupId>com.sun.portal.portletcontainer</groupId>
       <scope>provided</scope>
     </dependency>
