--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -1,77 +1,85 @@
-#Les droit
-A=GML.administrateur
-D=GML.domainManager
-K=GML.kmmanager
-U=GML.user
-G=GML.guest
-
-#notificationUser
-notificationUser.title=Nouveau message \u00E0 
-notificationUser.object=Objet
-notificationUser.message=Message
-
 #Connexion
 directory.connected=Connect\u00E9 depuis
 
-#Invitation
-invitation.action.title=Suivi des invitations
-invitation.tab.sent=Invitations en attentes
-invitation.tab.receive=Invitations re\u00E7ues
-invitation.dateInvitation=Date d'invitation
-invitation.dateInvitationSuffix=\u00E0
-invitation.action.confirme=Confirmer
-invitation.action.ignore=Ignorer
-userInvitation.sendMessage=Envoyer un message
-
 #Profil
-profil.wall=Mur
-profil.infos=Infos
-profil.publications=Publications
-profil.events=Ev\u00E8nements
-profil.photos=Photos
-profil.links=Liens
-
-profil.subnav.display = Afficher
-profil.subnav.identity = Identit\u00E9
-
-profil.elements_per_page.ALL=15
-profil.elements_per_page.EVENT=15
-profil.elements_per_page.PUBLICATION=15
-profil.elements_per_page.PHOTO=15
+newsFeed.scope.display = Afficher : 
+newsFeed.scope.all = Tous
+newsFeed.scope.publication = Publications
+newsFeed.scope.event = Ev\u00E8nements
+newsFeed.scope.photo = Images
+newsFeed.scope.relationship = Relations
+newsFeed.scope.status = Statuts
 
 profil.actions.changePhoto=Changer ma photo
 profil.actions.changeStatus=Changer mon statut
-profil.actions.changeInfos=Changer mes infos
 
 profil.icon.private.event=Ev\u00E9nement priv\u00E9
-profil.icon.public.event=Ev\u00E9nement public
-profil.icon.new.pub=Publication cr\u00E9\u00E9e
-profil.icon.update.pub=Publication modifi\u00E9e
-profil.icon.staus=Statut
 
-profil.relationShip.suffix=a ajout\u00E9
-profil.relationShip.prefix=\u00E0 son r\u00E9seau
+newsFeed.getNext = Informations plus anciennes
+newsFeed.inProgress = Chargement en cours
 
-profil.status.suffix=a mis \u00E0 jour son statut
+newsFeed.publication.updated.true=a modifi\u00E9 la publication
+newsFeed.publication.updated.false=a cr\u00E9\u00E9 la publication
+newsFeed.photo.updated.true=a modifi\u00E9 l'image
+newsFeed.photo.updated.false=a publi\u00E9 l'image
+newsFeed.event.label=participera \u00E0 l'\u00E9v\u00E9nement
+newsFeed.lastevent.label= a particip\u00E9 \u00E0 l'\u00E9v\u00E9nement
+newsFeed.status.suffix=a mis \u00E0 jour son statut \u00E0 
+newsFeed.relationShip.label = a ajout\u00E9 * \u00E0 son r\u00E9seau \u00E0 
 
-profil.getNext=Voir plus
-profil.contacts=Contacts
-profil.commonContacts=Contacts communs
-profil.showAll=Afficher tout
+myProfile.UserRights = Droits
+myProfile.OldPassword = Ancien mot de passe
+myProfile.NewPassword = Nouveau mot de passe
+myProfile.NewPasswordConfirm = Confirmation du nouveau mot de passe
+myProfile.WrongNewPwd = La confirmation du mot de passe est incorrecte...
+myProfile.MessageOK = Votre profil a \u00E9t\u00E9 mis \u00E0 jour avec succ\u00E8s...
+myProfile.Error_bad_credential = Votre mot de passe est incorrect
+myProfile.Error_unknown = Impossible de modifier votre profil, veuillez contacter votre administrateur
+myProfile.ModifyPasswordNotAllowed1 = Vous ne pouvez pas modifier ici votre mot de passe.
+myProfile.ModifyPasswordNotAllowed2 = Contactez votre administrateur...
+myProfile.LengthPwdLabel = caract\u00E8res minimum
+myProfile.WrongLength = La longueur du mot de passe est insuffisante !
+myProfile.NoSpacesInPassword = Le mot de passe ne doit pas contenir d'espace !
+myProfile.LoginQuestion = Question en cas d'oubli de mot de passe
+myProfile.LoginAnswer = R\u00E9ponse \u00E0 la question
 
-#image profil
-directory.photo=Image
-directory.buttonValid=Valider
+myProfile.settings.FavoriteLanguage = Langue
+myProfile.settings.language_fr = Fran\u00E7ais
+myProfile.settings.language_de = Allemand
+myProfile.settings.language_en = Anglais
+myProfile.settings.FavoriteLook = Look
+myProfile.settings.DefaultWorkSpace = Espace par d\u00E9faut
+myProfile.settings.Thesaurus = Activer le th\u00E9saurus
+myProfile.settings.DragDrop = Activer le glisser/d\u00E9poser
+myProfile.settings.WebdavEditing = Activer l'\u00E9dition en ligne
+myProfile.settings.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas impos\u00E9
 
-newsFeed.newsFeed=Fil d'informations
-newsFeed.relations=Relations
-newsFeed.contacts=Mes contacts
-newsFeed.directory=Annuaire
+myProfile.tab.feed = Fil d'informations
+myProfile.tab.wall = Mur
+myProfile.tab.profile = Profil
+myProfile.tab.settings = Pr\u00E9f\u00E9rences
+myProfile.tab.invitations = Invitations
 
+myProfile.invitations.received = Re\u00E7ues
+myProfile.invitations.sent = Envoy\u00E9es
+myProfile.invitations.cancel = Annuler l'invitation
+myProfile.invitations.accept = Accepter l'invitation
+myProfile.invitations.ignore = Ignorer l'invitation
+myProfile.invitations.date = Date de l'invitation : 
 
-newsFeed.publication.apdated.true=a modifi\u00E9 la publication
-newsFeed.publication.apdated.false=a publi\u00E9 la publication
-newsFeed.photo.apdated.true=a modifi\u00E9 la photo
-newsFeed.photo.apdated.false=a publi\u00E9 la photo
-newsFeed.event.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
-newsFeed.lastevent.apdated.false=a publi\u00E9 l'\u00E9v\u00E9nement
+myProfile.invitations.outbox.empty = Vous n'avez pas d'invitation en attente.
+myProfile.invitations.inbox.empty = Vous n'avez pas re\u00e7u d'invitation.
+
+myProfile.invitations.dialog.cancel.title = Annuler l'invitation ?
+myProfile.invitations.dialog.cancel.message = Etes-vous s\u00fbr(e) de vouloir annuler l'invitation envoy\u00E9e \u00e0
+myProfile.invitations.dialog.accept.title = Accepter l'invitation ?
+myProfile.invitations.dialog.accept.message = Etes-vous s\u00fbr(e) de vouloir accepter l'invitation de
+myProfile.invitations.dialog.ignore.title = Ignorer l'invitation ?
+myProfile.invitations.dialog.ignore.message = Etes-vous s\u00fbr(e) de vouloir ignorer l'invitation de
+
+myProfile.contacts = contacts
+myProfile.contacts.all = Tout afficher...
+
+myContactProfile.tab.profile = Profil
+myContactProfile.tab.wall = Mur
+myContactProfile.contacts.common = contacts communs
