Removing duplication, all personalization data manipulation uses the personalization service.\n All 'spring' serviceshave now interfaces and are accessible through the SilverpeasServiceProvider

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -53,6 +53,10 @@
       <artifactId>ejb-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.0-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.jms</groupId>
       <artifactId>jms-api</artifactId>
     </dependency>
