--- a/ejb-core/personalization/pom.xml
+++ b/ejb-core/personalization/pom.xml
@@ -16,6 +16,7 @@
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.0-api</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.synyx.hades</groupId>
