Centralize now the anonymous user information into an unique place: the UserDetail. Refactor others object classes so anonymous user information is asked to the UserDetail class or to a UserDetail instance

--- a/web-core/src/test/resources/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
+++ b/web-core/src/test/resources/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasV5.properties
@@ -21,6 +21,10 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+
+# A property for testing purpose
+IsLoaded = true
+
 Window = com.stratelia.webactiv.util.viewGenerator.html.window.WindowWeb20V5
 BrowseBar = com.stratelia.webactiv.util.viewGenerator.html.browseBars.BrowseBarComplete
 # BrowseBar = com.stratelia.webactiv.util.viewGenerator.html.browseBars.BrowseBarWeb20V5
@@ -92,8 +96,6 @@ spaceMaxChar = 25
 defaultHomepage =
 persoHomepage =
 
-# Id du user utilis\u00e9 pour l'authentification anonyme
-guestId	= 403
 
 # Ids des composants affich\u00e9s dans la Topbar
 # les ids doivent \u00eatre s\u00e9par\u00e9s par des virgules.
