closing feature #1509 Integrating Aurore's design...

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
@@ -93,5 +93,5 @@ pdcPeas.group = /util/icons/groupe.gif
 pdcPeas.groupSynchronized = /jobDomainPeas/jsp/icons/scheduledGroup.gif
 
 pdcPeas.addPosition = /pdcPeas/jsp/icons/add.gif
-pdcPeas.editPosition = /pdcPeas/jsp/icons/edit_button.gif
-pdcPeas.deletePosition = /pdcPeas/jsp/icons/delete.gif
+pdcPeas.editPosition = /util/icons/update.gif
+pdcPeas.deletePosition = /util/icons/delete.gif
