--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle.properties
@@ -27,35 +27,36 @@ fileSharing.alt = Texte de la balise <alt>
 fileSharing.tickets = Mes tickets
 fileSharing.ticket = Ticket
 fileSharing.addTicket = Ajouter un ticket
-fileSharing.deleteTickets = Supprimer tous les tickets sélectionnés
+fileSharing.deleteTickets = Supprimer tous les tickets s\u00e9lectionn\u00e9s
 fileSharing.interneLink = Lien interne
-fileSharing.endDate = Date de fin de validité 
-fileSharing.nbAccess = Nombre d'accès
-fileSharing.nbAccessMax = Nombre d'accès maximun
-fileSharing.operation = Opérations
-fileSharing.updateTicket = Mettre à jour un ticket
-fileSharing.createTicket = Créer un ticket
+fileSharing.endDate = Date de fin de validit\u00e9
+fileSharing.nbAccess = Nombre d'acc\u00e8s
+fileSharing.nbAccessMax = Nombre d'acc\u00e8s maximun
+fileSharing.operation = Op\u00e9rations
+fileSharing.updateTicket = Mettre \u00e0 jour un ticket
+fileSharing.createTicket = Cr\u00e9er un ticket
 fileSharing.deleteTicket = Supprimer un ticket
 fileSharing.fileId = Id du fichier
 fileSharing.componentId = Id du composant
 fileSharing.versioning = Versioning
-fileSharing.creationDate = Créé le 
+fileSharing.creationDate = Cr\u00e9\u00e9 le
 fileSharing.by = par
-fileSharing.updateDate = modifié le
-fileSharing.endDate = Date de fin de validité
-fileSharing.nbAccessMax = Nombre d'accès maximum
-fileSharing.nbAccess = Nombre d'accès 
-fileSharing.keyFile = clé
+fileSharing.updateDate = modifi\u00e9 le
+fileSharing.endDate = Date de fin de validit\u00e9
+fileSharing.nbAccessMax = Nombre d'acc\u00e8s maximum
+fileSharing.nbAccess = Nombre d'acc\u00e8s
+fileSharing.keyFile = cl\u00e9
 fileSharing.confirmTicket = Votre ticket
-fileSharing.confirmDeleteTicket = Etes vous sûr de vouloir supprimer le ticket 
-fileSharing.downloadDate = téléchargé le 
+fileSharing.confirmDeleteTicket = Etes vous s\u00fbr de vouloir supprimer le ticket
+fileSharing.downloadDate = t\u00e9l\u00e9charg\u00e9 le
 fileSharing.IP = IP
-fileSharing.url = url d'accès : 
-fileSharing.expiredTicket = Le ticket demandé a expiré
-fileSharing.nameFile = Nom du ficher 
+fileSharing.url = url d'acc\u00e8s :
+fileSharing.expiredTicket = Le ticket demand\u00e9 a expir\u00e9
+fileSharing.nameFile = Nom du ficher
 fileSharing.sizeFile = Taille
-fileSharing.downloadLink = lien de téléchargement
+fileSharing.downloadLink = Lien vers le fichier \u00e0 t\u00e9l\u00e9charger
 fileSharing.ticketNotValid = Ce ticket n'est plus valide
 fileSharing.afficherCalendrier = afficher le calendrier
-fileSharing.maxValue = doit être compris entre 1 et 100
-
+fileSharing.maxValue = doit \u00eatre compris entre 1 et 100
+fileSharing.shareFile = a choisi de partager le fichier&nbsp;:
+fileSharing.downloadFileHelp = Pour t\u00e9l\u00e9charger directement le fichier, <br/>faites un <b>clic droit > Enregistrer la cible sous ... </b>
