Fixing some display bug in myContactProfile on JBoss 6

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -88,3 +88,6 @@ myProfile.contacts.all = Tout afficher...
 myContactProfile.tab.profile = Profil
 myContactProfile.tab.wall = Mur
 myContactProfile.contacts.common = contacts communs
+
+profil.subnav.display=Afficher\:
+profil.subnav.identity=Identit\u00e9
