closing feature #1615 Changing labels and order of parameter values.

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -53,11 +53,11 @@ myProfile.settings.Thesaurus = Activer le th\u00e9saurus
 myProfile.settings.DragDrop = Activer le glisser/d\u00e9poser
 myProfile.settings.WebdavEditing = Activer l'\u00e9dition en ligne
 myProfile.settings.ChangeLookAlert = Le look personnel ne s'appliquera qu'aux espaces dont le look n'est pas impos\u00e9
-myProfile.settings.DEFAULT=Appliquer le style du look
-myProfile.settings.DISABLE=Afficher uniquement tous les espaces
-myProfile.settings.ALL=Afficher tous les espaces
-myProfile.settings.BOOKMARKS=Afficher mes espaces favoris
-myProfile.settings.menuDisplay=Affichage du menu gauche
+myProfile.settings.DEFAULT=Utiliser par d\u00e9faut
+myProfile.settings.ALL=Utiliser l'onglet "Tous" par d\u00e9faut
+myProfile.settings.BOOKMARKS=Utiliser l'onglet "Favoris" par d\u00e9faut
+myProfile.settings.DISABLE=Ne pas utiliser
+myProfile.settings.menuDisplay=Espaces favoris
 
 myProfile.tab.feed = Fil d'informations
 myProfile.tab.wall = Mur
