--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -279,3 +279,7 @@ GML.linkTo = R\u00e9f\u00e9rencer
 GML.or = ou
 GML.galleries = Phototh\u00e8ques
 GML.applet.dnd.alt=Applet pour le glisser/d\u00e9poser de fichiers
+
+GML.mandatory = Obligatoire
+
+GML.and = et
