After some changes coming from the merge with the JBoss6 branch, some dependencies require to be explicitly declared in order to find them in among the dependencies in the targeted EAR

--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -181,6 +181,16 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <artifactId>jackson-xc</artifactId>
+      <groupId>org.codehaus.jackson</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>jackson-jaxrs</artifactId>
+      <groupId>org.codehaus.jackson</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <scope>provided</scope>
