--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -176,6 +176,22 @@
       <artifactId>jersey-json</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-lgpl</artifactId>
+    </dependency>
+    <dependency>
+      <artifactId>jackson-xc</artifactId>
+      <groupId>org.codehaus.jackson</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>jackson-jaxrs</artifactId>
+      <groupId>org.codehaus.jackson</groupId>
+    </dependency>
+    <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
     </dependency>
