--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -57,3 +57,16 @@ searchengine.facet.max.length = 20
 
 SpacesExcludedFromGlobalSearch = 
 ComponentsExcludedFromGlobalSearch = 
+
+external.search.enable = true
+# if the external search is enabled, you need to create as many external data as this following example
+external.search.server.1.name=INPI
+external.search.server.1.data.path=D:\\silverpeas\\silverpeas_INPI_prod\\data
+# List of component types: comma separated values
+external.search.server.1.component.filters=kmelia
+external.search.server.1.url=http://pegase.na.inpi/silverpeas
+
+external.search.server.2.name=ADEF
+external.search.server.2.data.path=D:\\silverpeas\\silverpeas_adef\\data
+external.search.server.2.component.filters=kmelia
+external.search.server.2.url=http://polyphonis-test.adef.intra/silverpeas
