feature #1324 update development

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -59,6 +59,7 @@ SpacesExcludedFromGlobalSearch =
 ComponentsExcludedFromGlobalSearch = 
 
 external.search.enable = true
+server.name=Silverpeas
 # if the external search is enabled, you need to create as many external data as this following example
 external.search.server.1.name=INPI
 external.search.server.1.data.path=D:\\silverpeas\\silverpeas_INPI_prod\\data
