ajout composant delegatednews

--- a/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/admin/roleMapping.properties
@@ -54,6 +54,11 @@ connecteurJDBC_publisher = publisher
 connecteurJDBC_writer = publisher
 connecteurJDBC_reader = user
 
+delegatednews_admin = admin
+delegatednews_publisher = user
+delegatednews_writer = user
+delegatednews_reader = user
+
 # Workflow
 demandeCongesSimple_admin = supervisor
 demandeCongesSimple_publisher = Responsable
