Writing tests and fixing problem with PreparedStatement not closed maybe fixing the bug #1635

--- a/ejb-core/silverstatistics/src/test/resources/com/stratelia/silverpeas/silverstatistics/SilverStatisticsTest.properties
+++ b/ejb-core/silverstatistics/src/test/resources/com/stratelia/silverpeas/silverstatistics/SilverStatisticsTest.properties
@@ -85,7 +85,7 @@ StatsKeysTypeAccess  = VARCHAR-INTEGER-VARCHAR-VARCHAR-VARCHAR-DECIMAL
 StatsKeysCumulAccess = countAccess
 StatsModeCumulAccess = Add
 StatsPurgeInMonthAccess = 120
-StatsRunAccess = True
+StatsRunAccess = False
 StatsAsynchronAccess = True
 
 StatsTableNameVolume = SB_Stat_Volume
@@ -93,9 +93,9 @@ StatsKeysNameVolume = dateStat-userId-peasType-spaceId-componentId-countVolume
 StatsKeysTypeVolume  = VARCHAR-INTEGER-VARCHAR-VARCHAR-VARCHAR-DECIMAL
 StatsKeysCumulVolume = countVolume
 StatsModeCumulVolume = Replace
-StatsPurgeInMonthVolume = 120
+StatsPurgeInMonthVolume = 80
 StatsRunVolume = True
-StatsAsynchronVolume = True
+StatsAsynchronVolume = False
 
 // standard component class name not fed
 connecteurJDBC = com.stratelia.silverpeas.connecteurJDBC.ConnecteurJDBCStatistics
