update feature #1324, Add Ajax call inside result page for markAsRead Improve code

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -260,3 +260,7 @@ pdcPeas.group.tooltip.enable= Cliquer pour affiner la recherche sur {0}.
 pdcPeas.group.tooltip.disable= Cliquer pour supprimer le filtre sur {0}.
 
 pdcPeas.popularity = * views
+
+pdcPeas.external.search.unknown=Serveur externe
+pdcPeas.external.search.error=Veuillez contacter l'administrateur du site. Un problème de configuration ne permet pas d'obtenir le lien d'accès à cette information externe.
+pdcPeas.error= Erreur
