update feature #1324 improve code refactoring and change default settings delete also ajax error handling for google chrome !!!

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -58,16 +58,17 @@ searchengine.facet.max.length = 20
 SpacesExcludedFromGlobalSearch = 
 ComponentsExcludedFromGlobalSearch = 
 
-external.search.enable = true
-server.name=Silverpeas
-# if the external search is enabled, you need to create as many external data as this following example
-external.search.server.1.name=INPI
-external.search.server.1.data.path=D:\\silverpeas\\silverpeas_INPI_prod\\data
-# List of component types: comma separated values
-external.search.server.1.component.filters=kmelia
-external.search.server.1.url=http://pegase.na.inpi/silverpeas
+external.search.enable = false
 
-external.search.server.2.name=ADEF
-external.search.server.2.data.path=D:\\silverpeas\\silverpeas_adef\\data
+server.name=Silverpeas
+# if the external search is enabled, you need to create as many external data as this following example starting from 1
+external.search.server.1.name=EXTERNAL SRV 1
+external.search.server.1.data.path=D:\\silverpeas\\external_server_1\\data
+# List of component types authorized : comma separated values
+external.search.server.1.component.filters=kmelia
+external.search.server.1.url=http://external_server_1/silverpeas
+
+external.search.server.2.name=EXTERNAL SRV 2
+external.search.server.2.data.path=D:\\silverpeas\\external_server_2\\data
 external.search.server.2.component.filters=kmelia
-external.search.server.2.url=http://polyphonis-test.adef.intra/silverpeas
+external.search.server.2.url=http://external_server_2/silverpeas
