--- a/ejb-core/silverstatistics/src/test/resources/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
+++ b/ejb-core/silverstatistics/src/test/resources/com/stratelia/silverpeas/silverstatistics/SilverStatistics.properties
@@ -97,14 +97,14 @@ StatsPurgeInMonthVolume = 120
 StatsRunVolume = True
 StatsAsynchronVolume = True
 
-// standard component class name not fed
+#standard component class name not fed
 connecteurJDBC = com.stratelia.silverpeas.connecteurJDBC.ConnecteurJDBCStatistics
 connectorView = com.stratelia.silverpeas.connectorView.ConnectorViewStatistics
 outlook = com.stratelia.webactiv.outlook.OutlookStatistics
 vsicMain = com.stratelia.webactiv.vsicMain.VsicMainStatistics
 demandeConges = com.stratelia.webactiv.demandeConges.DemandeConges
 
-// standard component class name for volume feed
+#standard component class name for volume feed
 almanach = com.stratelia.webactiv.almanach.AlmanachStatistics
 bookmark = com.stratelia.webactiv.webSites.WebSitesStatistics
 chat = com.stratelia.silverpeas.chat.ChatStatistics
@@ -133,12 +133,12 @@ mailinglist = com.silverpeas.mailinglist.MailingListStatistics
 resourcesManager = com.silverpeas.resourcesmanager.ResourcesManagerStatistics
 classifieds = com.silverpeas.classifieds.ClassifiedsStatistics
 
-// pdc component class name for volume feed
+#pdc component class name for volume feed
 fileBoxPlus = com.stratelia.silverpeas.fileBoxPlus.FileBoxPlusStatistics
 questionReply = com.silverpeas.questionReply.QuestionReplyStatistics
 whitePages = com.silverpeas.whitePages.WhitePagesStatistics
 
-// client component class name for volume feed
+#client component class name for volume feed
 demandeMission = com.silverpeas.processManager.ProcessManagerStatistics
 documentation = com.stratelia.silverpeas.fileBoxPlus.FileBoxPlusStatistics
 imputation = com.stratelia.silverpeas.imputation.ImputationStatistics
