Fix bug #1802. The message bundles in some portlet JSPs are now set with the favorite language of the user. The title of the default silverpeas portlets are now translated. The title of the portlets in the portlet-window-registry.xml is represented by a property key from which the actual localized title can be fetched. The localization of the title is performed by the WindowInvoker (that sets the title of each portlet)

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle.properties
@@ -28,9 +28,21 @@
 fixColWidth=Fixer la largeur
 addAColumn=Ajouter une colonne
 saveChanges=Sauvegarder vos modifications
-revert=Revenir à la version précédente
+revert=Revenir \u00e0 la version pr\u00e9c\u00e9dente
 colSizeFormat=Utiliser le format suivant : "n%", "npx" ou "*"
 addToNewCol = Portlets a ajouter a la nouvelle colonne
 addToCol = Portlets a ajouter a la colonne
 portlet = Portlet
 desc = Description
+
+portlet.LastPublications.title = Derni\u00e8res publications
+portlet.FavoriteQueries.title = Mes requ\u00eates favorites
+portlet.NextEvents.title = Mes prochains \u00e9v\u00e9nements
+portlet.silverpeas.MyTodosPortlet.title = Mes t\u00e2ches
+portlet.MyNotificationsPortlet.title = Mes notifications
+portlet.HelloSilverpeas.title = Bienvenue
+portlet.MyBookmarks.title = Mes liens favoris
+portlet.MyCheckOutFiles.title = Mes fichiers r\u00e9serv\u00e9s
+portlet.QuickInfos.title = Actualit\u00e9s
+portlet.ComponentInstance.title = Un composant
+portlet.IFrame.title = IFrame
