Related to feature #1324, adding new property server.name in IndexEngine.properties.

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/indexEngine/IndexEngine.properties
@@ -73,4 +73,5 @@ TimeOutParameter = 30000
 #activate "did you mean" Indexing
 enableDymIndexing = true
 
-
+# server name to identify origin of indexed documents
+server.name = Silverpeas
