fixing bug #1913 Checking field name (only letters and numbers)

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -180,7 +180,7 @@ GML.yes						        = Oui
 // Titre fen\u00eatre
 GML.popupTitle						= ___/ Silverpeas&#8482; - Collaborative Portal Organizer \\_________________________________________
 
-GML.trademark						= &copy; 2001-2010 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits r\u00e9serv\u00e9s
+GML.trademark						= &copy; 2001-2011 <a href="http://www.silverpeas.com" target="_blank">Silverpeas</a> - Tous droits r\u00e9serv\u00e9s
 
 // Formulaire
 GML.thefield						= Le champ
@@ -237,6 +237,7 @@ GML.MustContainsPostDate = doit contenir une date post\u00e9rieure \u00e0 aujour
 GML.MustContainsDateBetween1 = doit contenir une date entre le
 GML.MustContainsDateBetween2 = et le
 GML.MustContainsCorrectHour = doit contenir une heure correcte
+GML.MustContainsLettersAndDigitsOnly = doit \u00eAtre compos\u00e9 uniquement de lettres et de chiffres
 
 //Plan de classement
 GML.PDC = Plan de Classement
