Adding the display of correct icons for MsOffice files

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/uploads/uploadSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/uploads/uploadSettings.properties
@@ -33,12 +33,34 @@ doc = word.gif
 rtf = word.gif
 dot = wordModel.gif
 xls = excel.gif
+xlt = excel.gif
 mdb = access.gif
 ppt = powerpoint.gif
 pps = powerpoint.gif
+pot = powerpoint.gif
+ppa = powerpoint.gif
+
 docx = word2007.gif
+dotx = word2007.gif
+docm = word2007.gif
+dotm = word2007.gif
+
 xlsx = excel2007.gif
+xla = excel2007.gif
+xltx = excel2007.gif
+xlsm = excel2007.gif
+xltm = excel2007.gif
+xlam = excel2007.gif
+xlsb = excel2007.gif
+
 pptx = powerPoint2007.gif
+potx = powerPoint2007.gif
+ppsx = powerPoint2007.gif
+ppam = powerPoint2007.gif
+pptm = powerPoint2007.gif
+potm = powerPoint2007.gif
+ppsm = powerPoint2007.gif
+
 pubx = publisher2007.gif
 
 3d  = 3d.gif
