fixing bug #1895 Now, in XML templates, name of files uploaded through image, file and video fields are checked. If filename > 100 characters a message alerts user and form is not submitted.

--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
@@ -97,3 +97,6 @@ Blue = Bleu
 Fuchsia = Fuchsia
 Turquoise = Turquoise
 White = Blanc
+
+form.Extra = Informations complémentaires
+form.field.file.toolong = doit être un fichier dont le nom ne doit pas excéder 100 caractères.
