--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,15 @@ target
 /web-core/.project
 /web-core/src/main/java/META-INF
 /war-core/src/main/webapp/META-INF
+/ejb-core/channels/.settings
+/ejb-core/channels/.classpath
+/ejb-core/channels/.project
+/ejb-core/channels/src/main/resources/META-INF/MANIFEST.MF
+/ejb-core/pdc/.settings
+/ejb-core/pdc/.classpath
+/ejb-core/pdc/.project
+/ejb-core/searchengine/.settings
+/ejb-core/searchengine/.classpath
+/ejb-core/searchengine/.project
+/ejb-core/pdc/src/main/resources/META-INF/MANIFEST.MF
+/ejb-core/searchengine/src/main/resources/META-INF/MANIFEST.MF
