--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/settings/socialNetworkSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/settings/socialNetworkSettings.properties
@@ -4,3 +4,6 @@ numberOfContactsTodisplay=4
 newsFeed.maxNbTries = 10
 newsFeed.minNbDataBeforeNewTry = 15
 newsFeed.period = 15
+
+templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/socialNetwork/
+customersTemplatePath=${SILVERPEAS_DATA_HOME}/StringTemplates/socialNetwork/
