Cleaning Silverpeas initalization with Spring

--- a/config-core/src/main/config/initialize/systemSettings.properties
+++ b/config-core/src/main/config/initialize/systemSettings.properties
@@ -34,4 +34,6 @@ javax.net.ssl.trustStorePassword=changeit
 ssl.keystore=trustore.jks
 ssl.keystore.password=changeit
 mail.imaps.connectionpool.debug=true
+mail.imap.ssl.checkserveridentity=false
+mail.imap.ssl.trust=*
 mail.smtp.ssl.enable=false
