--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -95,3 +95,4 @@ myContactProfile.contacts.common = contacts communs
 profil.subnav.display=Afficher\:
 profil.subnav.identity=Identit\u00e9
 
+invitation.send = Envoyer une invitation
