--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>parent</artifactId>
-    <version>19-SNAPSHOT</version>
+    <version>19</version>
   </parent>
 
   <description>
@@ -46,7 +46,7 @@
   <scm>
     <connection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</connection>
     <developerConnection>scm:git:git@github.com:Silverpeas/Silverpeas-Core.git</developerConnection>
-    <url>http://github.com/Silverpeas/Silverpeas-Core.git</url>
+    <url>http://github.com/Silverpeas/Silverpeas-Core</url>
   </scm>
 
   <repositories>
