--- a/it-test-core/pom.xml
+++ b/it-test-core/pom.xml
@@ -4,12 +4,12 @@
 <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>5.6-SNAPSHOT</version>
+    <version>5.6</version>
   </parent>
 
   <groupId>com.silverpeas.core</groupId>
   <artifactId>it-test-core</artifactId>
-  <version>5.6-SNAPSHOT</version>
+  <version>5.6</version>
   <packaging>jar</packaging>
   <name>Integration Test Core</name>
   <description>
