[Export in Editable Format] Now the export/import API supports the export into an outputstream and the import from an inputstream

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
@@ -73,4 +73,4 @@ charset=UTF-8
 avatar.property = login
 avatar.extension = jpg
 
-exportTemplatePath = ${SILVERPEAS_HOME}/data/template-export/
+exportTemplatePath = data/template-export
