--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -57,6 +57,18 @@
       <artifactId>hibernate-jpa-2.0-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.synyx.hades</groupId>
+      <artifactId>org.synyx.hades</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.jms</groupId>
       <artifactId>jms-api</artifactId>
     </dependency>
