Cleaning the tests to use the new JPA domain driver, removing the old SilverpeasDriver and adding the possibility to run DAO old style tests with JUnit4

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -18,6 +18,7 @@
       <artifactId>test-core</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>informa</groupId>
