--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -44,6 +44,10 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>javax.enterprise</groupId>
+      <artifactId>cdi-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
     </dependency>
