Bug #1901 Update the JNDI names in jndi.properties to match thoses used in tests. Update the DateTime class by adding a new way to create an instance (used by the almanach component)

--- a/test-core/src/main/resources/com/stratelia/webactiv/util/jndi.properties
+++ b/test-core/src/main/resources/com/stratelia/webactiv/util/jndi.properties
@@ -85,7 +85,7 @@ FAVORIT_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 SUBSCRIBE_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 STATISTIC_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 CALENDAR_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-ALMANACH_DATASOURCE		= java:comp/env/jdbc/Silverpeas
+ALMANACH_DATASOURCE		= jdbc/Silverpeas
 FORUMS_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 QUESTION_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 ANSWER_DATASOURCE		= java:comp/env/jdbc/Silverpeas
@@ -106,7 +106,7 @@ PDC_BUSIHM_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 FILEBOXPLUS_DATASOURCE		= java:comp/env/jdbc/Silverpeas
 QUESTIONREPLY_DATASOURCE	= java:comp/env/jdbc/Silverpeas
 WHITEPAGES_DATASOURCE		= java:comp/env/jdbc/Silverpeas
-PERSISTENCE_EJB_DATASOURCE	= java:comp/env/jdbc/Silverpeas
+PERSISTENCE_EJB_DATASOURCE	= jdbc/Silverpeas
 MAIL_SESSION			= java:comp/env/MailSession
 USE_CATALOG_EJB			= java:comp/env/useCatalogEJB
 SECURITY_ADAPTER_CLASSNAME	= java:comp/env/securityAdapterClassName
