fixing bug #2007 Internationalization of a label

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -284,3 +284,4 @@ GML.applet.dnd.alt=Applet pour le glisser/d\u00e9poser de fichiers
 GML.mandatory = Obligatoire
 
 GML.and = et
+GML.reset = Remise \u00e0 z\u00e9ro
