--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -285,3 +285,5 @@ GML.mandatory = Obligatoire
 
 GML.and = et
 GML.reset = Remise \u00e0 z\u00e9ro
+
+GML.operations.setupComponent = Param\u00e9trer ce service
