[Export in Editable Format] Add a new parameter to set the host on which an OpenOffice server is running

--- a/config-core/src/main/config/properties/com/silverpeas/converter/openoffice.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/converter/openoffice.properties
@@ -20,5 +20,7 @@
 #  You should have received a copy of the GNU Affero General Public License
 #  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# The port at which the openoffice service listens.
+# The port at which the openoffice service is listening.
 openoffice.port = 8100
+# The host on which the openoffice service is running. No value means localhost.
+openoffice.host =
